08_networking/network-policies/03-team-a-egress-advanced.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-egress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: ta
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - ipBlock:
        cidr: 100.96.0.0/32
      ports:
        - protocol: TCP
          port: 3306
  - to:
    - namespaceSelector:
        matchLabels:
          name: team-b
      podSelector:
        matchLabels:
          app: tb
    ports:
    - protocol: TCP
      port: 80
      # endPort: 3000
  - to:
    - ipBlock:
        cidr: 100.96.0.0/11
    ports:
    - protocol: UDP
      port: 53
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: team-b
      podSelector:
        matchLabels:
          app: tb
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
  labels:
    name: team-b
